# bionic-jpeg

./: README  README.md
android/: Android.mk
android/jni/: Android.mk  jconfig.h
hybris-bridge/: Makefile.am  config.status  configure  libjpeg-bridge.c  libtool
include/: jconfig.h
jpeg-9/: Makefile.in  aclocal.m4  configure  jconfig.cfg
jpeg-bridge/: Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libjpeg-bridge.c  libtool
jpeg-client/: Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
jpeg-library/: Makefile.am  configure.ac
jpeg-library/jni/: Android.mk
