
AC_INIT([libhybris-bridge], [1.0.0])

# Directory where autotools helper scripts lives.
AC_CONFIG_AUX_DIR([autotools])

# Initialize Automake
# Don't require all the GNU mandated files
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_MACRO_DIR([autotools/m4])

AC_PROG_CC
AM_PROG_AR

LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
